# yast-ntsutils

./: MAINTAINER  Makefile  Makefile.am  Makefile.in  README.md  RPMNAME  config.status  configure  configure.in  yast2-ntsutils.spec.in
agents/: Makefile  Makefile.am  Makefile.in  ntsutils.scr
autom4te.cache/: output.0  requests  traces.0  traces.1
db/: uuid
db/revprops/0/: 0
doc/: Makefile  Makefile.am  Makefile.in
doc/autodocs/: Makefile  Makefile.am  Makefile.in
package/: yast2-ntsutils.changes
src/: .dep  Makefile  Makefile.am  Makefile.in  Ntsutils.ycp  complex.ycp  dialogs.ycp  helps.ycp  ntsutils.desktop  ntsutils.ycp  ntsutils_proposal.ycp  wizards.ycp
testsuite/: Makefile
testsuite/tests/: Ntsutils.out  Ntsutils.ycp
